fix(catalog): refine scrollbar + minor refinements
SL-22

--- a/src/app/styles/normalize.scss
+++ b/src/app/styles/normalize.scss
@@ -14,6 +14,32 @@ h6 {
     margin: 0;
 }
 
+ul {
+    padding: 0;
+    margin: 0;
+    list-style: none;
+}
+
 html {
     scroll-behavior: smooth;
+}
+
+::-webkit-scrollbar {
+    width: 8px;
+    height: 8px;
+    background-color: transparent;
+
+    &-track {
+        background-color: transparent;
+        border-radius: 5px;
+    }
+
+    &-thumb {
+        background-color: #acb6c4;
+        border-radius: 5px;
+    }
+
+    &-corner {
+        background-color: #ffffff;
+    }
 }
