--- a/src/pages/catalog/content/styles.module.scss
+++ b/src/pages/catalog/content/styles.module.scss
@@ -16,9 +16,6 @@
         display: flex;
         flex-grow: 1;
         justify-content: space-between;
-        padding: 0;
-        margin: 0;
-        list-style: none;
 
         &Item {
             // margin: 0 10px;
